@@ -31,14 +31,14 @@
         <th class="gdfColHeader gdfResizable" style="width:250px;">name</th>
         <th class="gdfColHeader gdfResizable" style="width:75px;">start</th>
         <th class="gdfColHeader gdfResizable" style="width:75px;">end</th>
-        <th class="gdfColHeader gdfResizable" style="width:35px;">dur.</th>
-        <th class="gdfColHeader gdfResizable" style="width:60px;">dep.</th>
+        <th class="gdfColHeader gdfResizable" style="width:35px;">timing</th>
+        <th class="gdfColHeader gdfResizable" style="width:100px;">depends</th>
         <th class="gdfColHeader gdfResizable" style="width:400px; text-align: left;">resources</th>
-      <th class="gdfColHeader gdfResizable" style="width:785px;"></th>
-    </tr>
-    </thead>
-  </table>
-  --></div>
+        <th class="gdfColHeader gdfResizable" style="width:745px;"></th>
+      </tr>
+      </thead>
+    </table>
+    --></div>
 
     <div class="__template__" type="TASKROW"><!--
   <tr taskId="(#=obj.id#)" class="taskEditRow" >
@@ -47,7 +47,7 @@
     <td class="gdfCell indentCell" style="padding-left:(#=obj.getParents().length*10#)px; (#=obj.getChildren().length>0?'font-weight: bold':''#)">(#=obj.name#)</td>
     <td class="gdfCell"><input type="text" name="start"  value="" class="date"></td>
     <td class="gdfCell"><input type="text" name="end" value="" class="date"></td>
-    <td class="gdfCell"><input type="text" name="duration" value="(#=obj.duration#)"></td>
+    <td class="gdfCell"><input type="text" name="timing" value="(#=obj.schedule_model.toUpperCase()[0]#): (#=obj.schedule_timing#)(#=obj.schedule_unit#)"></td>
     <td class="gdfCell"><input type="text" name="depends" value="(#=obj.depend_ids#)" (#=obj.hasExternalDep?"readonly":""#)></td>
     <td class="gdfCell taskAssigs">(#=obj.getResourcesString()#)</td>
   </tr>
